--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,14 +14,16 @@ body {
 
 .background {
   position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 125%;
+  height: 100%;
   background-color: black;
   opacity: 70%;
 }
 
 .card {    
-    width: 700px;   
+    width: 500px;
   }
 
 .statistic {
@@ -29,22 +31,21 @@ body {
   text-align: center;
   color: white;
   font-size: 40px;
-  border: 3px solid white;
+  /* border: 3px solid white; */
   border-radius: 20px;
 }
   
   .hole-list {
-    width: 850x;
-    height: 600px;
     display: flex;
     flex-wrap: wrap; 
-    gap: 20px; 
+    gap: 10px;
+    justify-content: space-around;
   }
   
   .hole {
-    width: 150px;
-    height: 150px;    
-    margin-top: 20px;
+    width: 100px;
+    height: 100px;    
+    margin-top: 10px;
     background: black;
     border-radius: 50%;
     border: 1px solid white;
@@ -65,8 +66,18 @@ body {
     margin: 0;
     z-index: 2;
     background-color: white;
-    width: 800px;
-    height: 250px;
-    font-size: 100px;
-    border-radius: 20px;
+    width: 210px;
+    height: 50px;
+    font-size: 20px;
+    border-radius: 10px;
+  }
+
+  .close {
+    position: absolute;
+    top: -15px;
+    right: -10px;
+    font-size: 20px;
+    color: white;
+    z-index: 2;
+    cursor: pointer;
   }
